# python-codespace

./: main.py  pyproject.toml  scrape_ufc_stats_all_historical_data.ipynb  scrape_ufc_stats_config.yaml  scrape_ufc_stats_library.py  ufc_event_details.csv  ufc_fight_details.csv  ufc_fight_results.csv  ufc_fight_stats.csv  ufc_stats
scripts_linkedin/: company_leads
scripts_ufc/: scrape_ufc_stats_all_historical_data.ipynb  scrape_ufc_stats_config.yaml  scrape_ufc_stats_fighter_tott.ipynb  scrape_ufc_stats_library.py  scrape_ufc_stats_unparsed_data.ipynb  test_scrape.ipynb  ufc_analysis.ipynb  ufc_fight_details.csv  ufc_fight_details_clean.csv  ufc_fight_results.csv  ufc_fight_results_clean.csv  ufc_fight_results_clean.ipynb  ufc_fight_stats_clean.ipynb  ufc_fighter_details.csv  ufc_fighter_tott.csv  ufc_fighter_tott.ipynb  ufc_fighter_tott_clean.csv
scripts_ufc/01.config/: scrape_ufc_stats_config.yaml  test_config.yaml  test_library.py
scripts_ufc/01.notebooks_scrapping/: scrape_ufc_stats_all_historical_data.ipynb  scrape_ufc_stats_fighter_tott.ipynb  scrape_ufc_stats_unparsed_data.ipynb  test_scrape.ipynb
scripts_ufc/02.csv_raw/: ufc_fight_details.csv
scripts_ufc/02.csv_scrapping/: ufc_fight_details.csv  ufc_fight_results.csv  ufc_fighter_details.csv
scripts_ufc/03.notebooks.ipnby/: scrape_ufc_stats_all_historical_data.ipynb  scrape_ufc_stats_unparsed_data.ipynb  test_scrape.ipynb  ufc_analysis_deltas.ipynb  ufc_analysis_flyweight.ipynb  ufc_fighter_tott.ipynb
scripts_ufc/03.notebooks_ETL/: ufc_event_details_clean.ipynb  ufc_fight_results copy.ipynb  (+5 more)
(+5 files in other folders)
