[project]
name = "python-codespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipywidgets>=8.1.8",
    "lib>=4.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
